Project-6/elb-secgroup.tf
resource "aws_security_group" "elb_security" {
  name   = "elb_security"
  vpc_id = module.vpc.vpc_id

  ingress {
    description = "Port 80 open"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    description = "Port 443 open"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  egress {
    description = "Open for all"
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]

  }




}
